--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
   <head>
-      
+
   <meta charset="utf-8">
   <title>NCW API</title>
   <meta name="description" content="">
@@ -25,8 +25,8 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="favicon.png"> 
-  </head> 
+  <link rel="icon" type="image/png" href="favicon.png">
+  </head>
   <body>
 
    <div class="bg-wrap">
@@ -37,7 +37,27 @@
       <div class="bg-image"></div>
     </div>
     <div class="title-container">
-      <h1 class="title">Title</h1>
-    </div>
+      <h1 class="title">Design Inspiration APIs</h1>
+        <div class="row">
+            <div class="one-third column"><a class="button" href="#">Facebook Group</a></div>
+            <div class="one-third column"><a class="button" href="#">APIs</a></div>
+            <div class="one-third column"><a class="button" href="#">Github Repository</a></div>
+        </div><!--end row of buttons-->
+        <p>Developed by NCW</p>
+        <div class="row">
+            <div class="two columns"><a
+                href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/onePage.json" target="_blank">One Page</a></div>
+            <div class="two columns"><a
+    href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/typography.json" target="_blank">Typography</a></div>
+            <div class="two columns"><a
+    href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/colorPalettes.json" target="_blank">Color Palettes</a></div>
+            <div class="two columns"><a
+    href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/codeSnippets.json" target="_blank">Code Snippets</a></div>
+            <div class="two columns"><a
+    href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/uxUi.json" target="_blank">UX/UI</a></div>
+            <div class="two columns"><a
+    href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/hiDefImages.json" target="_blank">Hi Def Images</a></div>
+        </div><!--end row content links-->
+    </div><!--title-container--?
   </body>
 </html>
