--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
             <div class="two columns"><a
     href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/hiDefImages.json" target="_blank">Hi Def Images</a></div>
         </div><!--end row content links-->
-    </div><!--title-container--?
+    </div><!--title-container-->
   </body>
 </html>
