fix horizontal centering

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <meta name="robots" content="noindex">
 
-
+  
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,10 +38,10 @@
     </div>
     <div class="title-container">
       <h1 class="title">Design Inspiration APIs</h1>
-        <div class="row">
-            <div class="one-third column"><a class="button" href="#">Facebook Group</a></div>
-            <div class="one-third column"><a class="button" href="#">APIs</a></div>
-            <div class="one-third column"><a class="button" href="#">Github Repository</a></div>
+        <div class="main-row row">
+            <div class="two columns">a</div>
+            <div class="two columns">a</div>
+            <div class="two columns">a</div>
         </div><!--end row of buttons-->
         <p>Developed by NCW</p>
         <div class="row">
