added main buttons and changed bottom link colors and animation

--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
     <div class="title-container">
       <h1 class="title">Design Inspiration APIs</h1>
         <div class="main-row row">
-            <div class="two columns">a</div>
-            <div class="two columns">a</div>
-            <div class="two columns">a</div>
+            <div class="two columns"><a class="button" href="#">Facebook Group</a></div>
+            <div class="two columns"><a class="button" href="#">APIs</a></div>
+            <div class="two columns"><a class="button" href="#">Github Repository</a></div>
         </div><!--end row of buttons-->
         <p>Developed by NCW</p>
         <div class="row">
-            <div class="two columns"><a
+            <div class="two columns"><a class="button2"
                 href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/onePage.json" target="_blank">One Page</a></div>
-            <div class="two columns"><a
+            <div class="two columns"><a class="button2"
     href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/typography.json" target="_blank">Typography</a></div>
-            <div class="two columns"><a
+            <div class="two columns"><a class="button2"
     href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/colorPalettes.json" target="_blank">Color Palettes</a></div>
-            <div class="two columns"><a
+            <div class="two columns"><a class="button2"
     href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/codeSnippets.json" target="_blank">Code Snippets</a></div>
-            <div class="two columns"><a
+            <div class="two columns"><a class="button2"
     href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/uxUi.json" target="_blank">UX/UI</a></div>
-            <div class="two columns"><a
+            <div class="two columns"><a class="button2"
     href="http://newbiecoderwarehouse.github.io/design-inspiration-api/apis/hiDefImages.json" target="_blank">Hi Def Images</a></div>
         </div><!--end row content links-->
     </div><!--title-container-->
