change layout; change text in button

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <div class="title-container">
       <h1 class="title">Design Inspiration APIs</h1>
         <div class="main-row row">
-            <div class="one-third columns"><a class="button" href="#">Facebook Group</a></div>
             <div class="one-third columns"><a class="button" href="#">APIs</a></div>
             <div class="one-third columns"><a class="button" href="#">Github Repository</a></div>
+            <div class="one-third columns"><a class="button" href="#">Developed by NCW</a></div>
         </div><!--end row of buttons-->
-        <p>Developed by NCW</p>
+       
     </div><!--title-container-->
-   
+    
   </body>
 </html>
